--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,18 @@
-hello world
+<!doctype html> 
+<!-- HTML5 -->
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Socket.io basics</title>
+    </head>
+    <body>
+        <!-- Require jquery library -->
+        <script src="/js/jquery-2.2.3.min.js"></script>
+        <!-- Require socket.io library -->
+        <script src="/js/socket.io-1.3.7.js"></script>
+        <!-- Make connection to server/socket.io -->
+        <script type="text/javascript">
+            var socket = io();
+        </script>
+    </body>
+</html>
