--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,8 @@
         <script src="/js/jquery-2.2.3.min.js"></script>
         <!-- Require socket.io library -->
         <script src="/js/socket.io-1.3.7.js"></script>
-        <!-- Make connection to server/socket.io -->
-        <script type="text/javascript">
-            var socket = io();
-        </script>
+        <!-- Make connection to server via our own app.js -->
+        <script src="/js/app.js"></script>
+
     </body>
 </html>
