--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,17 @@
         <title>Socket.io basics</title>
     </head>
     <body>
+        
+        <form id="message-form">
+            <input type="text" name="message"/>
+            <input type="submit"/>
+        </form>
+        
         <!-- Require jquery library -->
         <script src="/js/jquery-2.2.3.min.js"></script>
         <!-- Require socket.io library -->
         <script src="/js/socket.io-1.3.7.js"></script>
         <!-- Make connection to server via our own app.js -->
         <script src="/js/app.js"></script>
-
     </body>
 </html>
