Add message to browser UI

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
         <title>Socket.io basics</title>
     </head>
     <body>
+        <div class="messages">
+            <!-- Messages will be here -->
+        </div>
         
         <form id="message-form">
             <input type="text" name="message"/>
