--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
         <script src="/js/jquery-2.2.3.min.js"></script>
         <!-- Require socket.io library -->
         <script src="/js/socket.io-1.3.7.js"></script>
+        <!-- Require moment library -->
+        <script src="/js/moment.min.js"></script>
         <!-- Make connection to server via our own app.js -->
         <script src="/js/app.js"></script>
+        
     </body>
 </html>
