--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
         <script src="/js/socket.io-1.3.7.js"></script>
         <!-- Require moment library -->
         <script src="/js/moment.min.js"></script>
+        <!-- AJM code to assist with parsing query params -->
+        <script src="/js/QueryParams.js"></script> 
         <!-- Make connection to server via our own app.js -->
         <script src="/js/app.js"></script>
         
