Add support for chat rooms

--- a/public/chat.html
+++ b/public/chat.html
@@ -8,6 +8,10 @@
     <body>
         <a href="/index.html">Change Settings</a>
         
+        <h1 class="room-title">
+            <!-- Room name goes here from jQuery-->
+        </h1>
+        
         <div class="messages">
             <!-- Messages will be here -->
         </div>
