--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,13 @@
     <body>
         <h1>Join Chat</h1>   
         
-        <form action="/chat.html">
-            <label for="">Display Name</label>
+        <form action="/chat.html">            
+            <label for="">Display Name</label>            
             <input type="text" name="name"/>
+            <p></p>
+            <label for="">Room Name</label>
+            <input type="text" name="room" />
+            
             <input type="submit" value="Join Chat" />
         </form>     
     </body>
